--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,3 +6,16 @@ jobs:
     steps:
     - name: HelloWorld
       run: echo "Hello world"
+
+  test-linux:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v1
+        - name: Setup Python
+          uses: actions/setup-python@v2
+          with:
+            python-version: '3.x'
+            architecture: 'x64'
+        - name: Run Tests
+          run: python test-main.py
